feat function to see the comments of each animal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <!-- <script src="https://kit.fontawesome.com/e2d69b96e8.js" crossorigin="anonymous"></script> --> <!-- ICONOS  -->
+    <script src="https://kit.fontawesome.com/e2d69b96e8.js" crossorigin="anonymous"></script> <!-- OS  -->
 </head>
 <body class="containers-scroll">
     <header>
@@ -42,7 +42,7 @@
             <span class="fs-4">Areas</span>
         </div>
         <hr>
-        <ul id="listaAreas" class="listaZonas nav nav-pills flex-column mb-auto">
+        <ul id="listaAreas" class="listaZonas nav nav-pills flex-column mb-auto containers-scroll">
         </ul>
         <hr>
         <div class="dropdown">
@@ -60,22 +60,8 @@
     </aside>
 
     <main id="main">
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true"> <!-- Leer Mensajes -->
-            <div class="toast-header">
-                <i class="fa-solid fa-message"></i>
-              <strong class="me-auto"> Bootstrap</strong>
-              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-              Hello, world! This is a toast message.
-            </div>
-        </div>
 
         <section id="sectVerEspecies" class="sectVerEspecies d-none">
-            <!-- <div id="divSpecies" class="divSpecies containers-scroll borderDivScrool">
-            </div> -->
-            <!-- <div id="divAnimal&Form" class="divAnimalForm containers-scroll borderDivScrool">
-            </div> -->
         </section>
 
         <section id="sectForm" class="d-none">
@@ -90,6 +76,10 @@
                   </form>
                 </div>
             </div>
+        </section>
+
+        <!-- d-none -->
+        <section id="verComentarios" class="d-none">
         </section>
     </main>
 
