feat functions to print comment responses

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div id="divContenidoForm" class="modal-content rounded-4 shadow">
                 <div class="modal-header p-5 pb-4 border-bottom-0">
                   <h1 class="fw-bold mb-0 fs-2 whiteColorTitles" id="titleForm">JAVA SCRIPT</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" class="btn-close btn-close-white"></button>
                 </div>
           
                 <div class="modal-body p-5 pt-0">
