--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 </ul>
-                <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <form id="forSearch" class="d-flex" role="search">
+                    <input id="inputSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
             </div>
