feat function to print the search

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 
         <section id="verComentarios" class="d-none">
         </section>
+
+        <section id="verBusqueda" class="d-none">
+        </section>
     </main>
 
     <footer>
